Fix Contrast Error in Homepage

--- a/index.css
+++ b/index.css
@@ -164,3 +164,7 @@ input {
     background-color: var(--bg3);
     cursor: pointer;
 }
+
+.footertxt {
+    color: var(--b2);
+}
